deploy/k8s/api1-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ccb-api1
spec:
  selector:
    app: ccb-api1
  ports:
  - name: ccb-api1
    port: 8080
    targetPort: 8080
