deploy/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccb-ingress
  annotations:
    nginx.org/rewrites: "serviceName=ccb-portal rewrite=/; serviceName=ccb-api1 rewrite=/; serviceName=ccb-api2 rewrite=/"
spec:
  tls:
  - hosts:
    - x.dante.com
    secretName: nginx-server-secret
  rules:
  - host: x.dante.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ccb-portal
          servicePort: 8080
      - path: /api1
        backend:
          serviceName: ccb-api1
          servicePort: 8080
      - path: /api2
        backend:
          serviceName: ccb-api2
          servicePort: 8080
